# mmWave_bgt60lrxx

./: CMakelists.txt  README.md  main.cpp
bgt60/: CMakeLists.txt  DeviceLtr11Types.h  bgt60ltr11XXX_driver.hpp  bgt60ltr11XXX_regs.hpp
logger/: CMakelists.txt
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  bgt60_driver_unit_test.cpp
